# fasty

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  alembic.ini  alembic.ini.docker  docker-compose.yml  pyproject.toml  workers.py
alembic/: env.py
alembic/versions/: d1684241010b_create_items_table.py
fasty/: config.py  db.py  db_models.py  main.py  models.py  routers.py
fasty/items/: __init__.py  db_models.py  models.py  routers.py
fasty/tests/: test_main.py
