[tool.isort]
profile = "black"

[tool.poetry]
name = "fasty"
version = "0.1.0"
description = ""
authors = ["Chris Wright <cwright@twigeducation.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = {extras = ["psycopg2"], version = "^1.6.5"}
databases = {version = "^0.5.2", extras = ["postgresql"]}
fastapi = "^0.68.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
python-jose = "^3.1.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
httpx = "^0.19.0"
isort = "^5.9.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
pytest-forked = "^1.3.0"
pytest-xdist = "^2.3.0"
requests = "^2.26.0"
schemathesis = "^3.9.6"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"
